# Program_parallelization

./: CMakeLists.txt  README.md
include/: program_parallelization.hpp  simple_timer.hpp
source/: main.cpp  program_parallelization.cpp  simple_timer.cpp
